--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="search">Search</string>
     <string name="settings">Settings</string>
-    <string name="prompt_id">Enter item ID...</string>
+    <string name="prompt_id">Enter item ID</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
