--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,13 @@
 
     <string name="search">Search</string>
     <string name="settings">Settings</string>
+    <string name="visualization">Visualization</string>
     <string name="prompt_id">Enter item ID</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="curr_connected">Currently connected to:</string>
-    <string name="update_weight">Update Weight</string>
+    <string name="update_bluetooth">Update Weight from Bluetooth</string>
+    <string name="update_manual">Update Weight Manually</string>
+    <string name="prompt_weight">Enter new weight</string>
 </resources>
