Adding visualization and session report layouts and activities.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="update_bluetooth">Update Weight from Bluetooth</string>
     <string name="update_manual">Update Weight Manually</string>
     <string name="prompt_weight">Enter new weight</string>
+    <string name="sessionReport">Session Report</string>
 </resources>
