--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">WiDaC</string>
 
+    <string name="connect_device">Connect New Device</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
     <string name="visualization">Visualization</string>
@@ -12,6 +13,7 @@
     <string name="update_bluetooth">Bluetooth</string>
     <string name="update_manual">Manual</string>
     <string name="prompt_weight">Enter new weight</string>
+    <string name="pair_device">Pair New Device</string>
     <string name="sessionReport">Session Report</string>
     <string name="update_weight">Select a method to update weight:</string>
 </resources>
