added working dropdown to MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="sessionReport">Session Report</string>
     <string name="update_weight">Select a method to update weight:</string>
     <string name="spinnerHint">area_easting, area_northing, context_number, sample_number</string>
+    <string name="dropdown_hint">Select Area Easting to begin</string>
 </resources>
